namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web-public
  labels:
    name: web-public
